--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "openai": "^5.10.1",
     "ts-node": "^10.9.2",
